--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,16 @@ edition = "2021"
 authors = ["Aung Tay Zar Maung aungtayzarmaung@gmail.com"]
 
 [package.metadata.bootimage]
-test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
-test-success-exit-code = 33                                       # (0x10 << 1) | 1
+test-args = [
+  "-device",
+  "isa-debug-exit,iobase=0xf4,iosize=0x04",
+  "-serial",
+  "stdio",
+  "-display",
+  "none",
+]
+test-success-exit-code = 33 # (0x10 << 1) | 1
+test-timeout = 300 # (in seconds)
 
 [dependencies]
 bootloader = "0.9.8"
